<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- HEADER -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cart_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/person_icon" />
            <TextView
                android:id="@+id/buyer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/pelanggan"/>

            <View style="@style/vertical_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/no_order"/>

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/number"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <include
        layout="@layout/cart_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/init_disc_info"
        app:layout_constraintTop_toBottomOf="@id/cart_header"/>

    <TextView
        android:id="@+id/init_disc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskon"
        android:textSize="11sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vat_info"/>

    <TextView
        android:id="@+id/init_disc_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="2dp"
        android:textSize="11sp"
        android:text="@string/ina_price"
        app:layout_constraintBottom_toTopOf="@id/vat_number"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/init_disc_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="11sp"
        android:text="@string/default_price"
        app:layout_constraintBottom_toTopOf="@id/vat_number"
        app:layout_constraintLeft_toRightOf="@id/init_disc_price" />

    <!-- VAT ROW: Total semua item dijumlah-->
    <TextView
        android:id="@+id/vat_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="16dp"
        android:textSize="11sp"
        android:text="@string/total_quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/total_info"/>

    <TextView
        android:id="@+id/vat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="2dp"
        android:textSize="11sp"
        android:text="@string/default_price"
        app:layout_constraintBottom_toTopOf="@id/total_price_number"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- TOTAL ROW-->
    <TextView
        android:id="@+id/total_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/total"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/disc_info"/>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="6dp"
        android:textSize="11sp"
        android:text="@string/ina_price"
        app:layout_constraintBottom_toTopOf="@id/disc_price"
        app:layout_constraintRight_toRightOf="parent" />
    <!--        app:layout_constraintRight_toLeftOf="@id/total_price_number"/>-->

    <TextView
        android:id="@+id/total_price_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="6dp"
        android:textSize="11sp"
        android:text="@string/default_price"
        app:layout_constraintBottom_toTopOf="@id/disc_number"
        app:layout_constraintLeft_toRightOf="@id/total_price" />

    <!-- DISCOUNT ROW-->
    <TextView
        android:id="@+id/disc_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="16dp"
        android:textSize="11sp"
        android:text="@string/diskon_total"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tax_info"/>

    <TextView
        android:id="@+id/disc_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="2dp"
        android:textSize="11sp"
        android:text="@string/ina_price"
        app:layout_constraintBottom_toTopOf="@id/tax_price"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/disc_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="11sp"
        android:text="@string/default_price"
        app:layout_constraintBottom_toTopOf="@id/tax_number"
        app:layout_constraintLeft_toRightOf="@id/disc_price" />

    <!-- TAX ROW -->
    <TextView
        android:id="@+id/tax_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="11sp"
        android:text="@string/pajak_terbayar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stubBtn"/>

    <TextView
        android:id="@+id/tax_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:textSize="11sp"
        android:text="@string/ina_price"
        app:layout_constraintBottom_toTopOf="@id/deleteBtn"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tax_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:textSize="11sp"
        android:text="@string/default_price"
        app:layout_constraintBottom_toTopOf="@id/deleteBtn"
        app:layout_constraintLeft_toRightOf="@id/tax_price" />

    <!-- FOOTER BUTTONS -->
    <Button
        android:id="@+id/stubBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/orange"
        android:textSize="11sp"
        android:text="@string/simpan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/deleteBtn"
        app:layout_constraintBottom_toTopOf="@id/paymentBtn"/>

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:textSize="11sp"
        android:text="@string/hapus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/stubBtn"
        app:layout_constraintBottom_toTopOf="@id/paymentBtn"/>
    <Button
        android:id="@+id/paymentBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:backgroundTint="@color/teal_700"
        android:textSize="14sp"
        android:text="@string/bayar"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>