<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/stub_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="64sp"
                android:text="ID"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/stub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:textSize="16sp"
                android:text="@string/stub_name"
                app:layout_constraintLeft_toRightOf="@id/stub_id"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/stub_qty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:textSize="12sp"
                android:text="@string/history_qty"
                app:layout_constraintLeft_toRightOf="@id/stub_id"
                app:layout_constraintTop_toBottomOf="@id/stub_name"/>

            <TextView
                android:id="@+id/stub_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:textSize="12sp"
                android:text="@string/history_price"
                app:layout_constraintLeft_toRightOf="@id/stub_id"
                app:layout_constraintTop_toBottomOf="@id/stub_qty_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>